--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.2.5",
+    "axios": "^0.19.2",
     "immer": "^7.0.7",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "reselect": "^4.0.0"
   }
 }
